--- a/game/TODO
+++ b/game/TODO
@@ -9,18 +9,20 @@
     - [x] Indicate what round players are at
         - [x]  show final scores and FINAL WINNER!
     - [x] Display score of current round for each player
-        - [ ] Update score where day = now() by 1 once player wins game (each point of score is a win against a player per GAME in a day)
+        - [x] Update score where day = now() by 1 once player wins game (each point is a win against a player per GAME)
 - [x] Once game is over, include restart game button => page redirect
+- [x]  Fix button alignment for login
+- [x] Fix delete feature that is no longer working (I edited something)
+- [x]  remove nextRound button once it is pressed, so that the user cannot clear board mid-game
+- [ ] ASK: Should tiles be keyboard focusable?
+- [ ] Flash alert for edit missing border
 
-- [] Fix button alignment for login
-- [] Fix delete feature that is no longer working (I edited something)
-
-- [ ] Create accessibility tests for connect 4
-- [ ] feature tests ... 
-- [ ] Model tests ... 
-- [] Jest - javascript testing 
+- [x] Create accessibility tests for connect 4
+- [x] feature tests ... 
+- [x] Model tests ... 
+- [ ] Jest - javascript testing 
 
 - [ ] Include rubocop in circleci!
-- [] clean up console.log and prints
-
+- [ ] clean up console.log and prints
+- [ ] Add project to heroku
 - [ ] Include ticket for feedback
